Add beta calculation scripts and update EDA notebooks
Added betas/betas.py for calculating beta percentiles per game and betas_por_juego.csv with results. Updated data.ipynb to use new beta values and refactored mm1_perhour to use per-game beta. Added multiple EDA notebooks for individual games, removed obsolete model.ipynb, and updated model files.

--- a/data.ipynb
+++ b/data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 208,
    "id": "fc5b5ea6",
    "metadata": {},
    "outputs": [],
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 209,
    "id": "4a2ec613",
    "metadata": {},
    "outputs": [
@@ -426,7 +426,7 @@
        "[15300 rows x 33 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 209,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -437,7 +437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 210,
    "id": "88d644f7",
    "metadata": {},
    "outputs": [],
@@ -451,7 +451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 211,
    "id": "449f2810",
    "metadata": {},
    "outputs": [],
@@ -467,7 +467,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 212,
    "id": "01f4ffeb",
    "metadata": {},
    "outputs": [
@@ -519,7 +519,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 213,
    "id": "06b6f5d5",
    "metadata": {},
    "outputs": [
@@ -906,7 +906,7 @@
        "[15300 rows x 38 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 213,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -917,7 +917,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 214,
    "id": "bf81c1d2",
    "metadata": {},
    "outputs": [],
@@ -928,7 +928,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 215,
    "id": "a3242df2",
    "metadata": {},
    "outputs": [
@@ -976,7 +976,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 215,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -988,7 +988,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 216,
    "id": "99e0dc14",
    "metadata": {},
    "outputs": [
@@ -1010,7 +1010,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 217,
    "id": "539555ab",
    "metadata": {},
    "outputs": [],
@@ -1021,13 +1021,13 @@
     "    \"Loco Bus\": 24,\n",
     "    \"Dragón\": 20,\n",
     "    \"Comanche\": 24,\n",
-    "    \"Ratón Loroco\": 28,\n",
+    "    \"Ratón Loroco\": 4,\n",
     "    \"Remolino\": 6,\n",
     "    \"Rascacielos\": 18,\n",
     "    \"Tronco Splash\": 4,\n",
-    "    \"Bumperazo\": 30,\n",
+    "    \"Bumperazo\": 60,\n",
     "    \"Brinkanguro\": 24,\n",
-    "    \"Moto Bala\": 24,\n",
+    "    \"Moto Bala\": 12,\n",
     "    \"Convoy\": 20,\n",
     "    \"Bumpercitos\": 28,\n",
     "    \"Bici Mágica\": 12,\n",
@@ -1046,7 +1046,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 218,
    "id": "425e65c5",
    "metadata": {},
    "outputs": [],
@@ -1082,6 +1082,51 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 219,
+   "id": "732b27c5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "BETA_JUEGO = {\n",
+    "    \"Balloon Wheel\": 0.73,\n",
+    "    \"Bumperazo\": 0.44,\n",
+    "    \"Bumpercitos\": 0.49,\n",
+    "    \"Brincanguro\": 0.98,\n",
+    "    \"Bici Magica\": 0.94,\n",
+    "    \"Carrusel\": 0.53,\n",
+    "    \"Casichoco\": 0.61,\n",
+    "    \"Comanche\": 0.98,\n",
+    "    \"Convoy\": 0.51,\n",
+    "    \"Dragón\": 0.995,\n",
+    "    \"Relámpago\": 0.992,\n",
+    "    \"Faro Saltarín\": 0.806,\n",
+    "    \"Guerra Pirata\": 0.901,\n",
+    "    \"Loco Bus\": 0.716,\n",
+    "    \"Moto Bala\": 1.00,\n",
+    "    \"Polo Norte\": 0.6,\n",
+    "    \"Rascacielos\": 1.00,\n",
+    "    \"Ratón Loroco\": 0.937,\n",
+    "    \"Remolino\": 0.944,\n",
+    "    \"Samba Balloon\": 0.511,\n",
+    "    \"Tifón\": 0.95,\n",
+    "    \"Trencito\": 0.536,\n",
+    "    \"Tronco Splash\": 0.764,\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 220,
+   "id": "9bda3725",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_beta(juego_name: str) -> float:\n",
+    "    return float(BETA_JUEGO.get(juego_name, 0.80))"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "fb861203",
    "metadata": {},
@@ -1091,7 +1136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 221,
    "id": "cb121203",
    "metadata": {},
    "outputs": [],
@@ -1182,7 +1227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 222,
    "id": "823ee958",
    "metadata": {},
    "outputs": [
@@ -1582,7 +1627,7 @@
        "[612 rows x 37 columns]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 222,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1601,7 +1646,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 223,
    "id": "33756cee",
    "metadata": {},
    "outputs": [],
@@ -1611,99 +1656,100 @@
     "\n",
     "HORAS = [f\"{h}:00\" for h in range(9, 19)]  # 9..18\n",
     "\n",
-    "def mm1_perhour(df, capacidad_por_ciclo, max_espera_min=60):\n",
+    "def mm1_perhour(df, capacidad_por_ciclo, max_espera_min=60, juego_name=None):\n",
+    "    \"\"\"\n",
+    "    Calcula λ, μ, ρ y Wq por hora con M/M/1 usando capacidad efectiva:\n",
+    "        mu = (ciclos * capacidad_por_ciclo * beta) / 60\n",
+    "    Donde beta se toma de BETA_JUEGO por nombre de juego; si no existe, usa DEFAULT_BETA.\n",
+    "    Mantiene tu clipping:\n",
+    "        - Off service o saturado  -> Wq = max_espera_min\n",
+    "        - Estable -> fórmula M/M/1 (por minuto)\n",
+    "    \"\"\"\n",
     "    df = df.copy()\n",
+    "    beta = get_beta(juego_name) if juego_name is not None else 0.80\n",
     "\n",
-    "    # iterate for each hour\n",
     "    for h in HORAS:\n",
     "        col_cic = f\"{h} ciclos\"\n",
     "        col_asist = f\"{h} asistencia\"\n",
     "        if col_cic not in df.columns or col_asist not in df.columns:\n",
     "            continue\n",
     "\n",
-    "        # calculate λ y μ per minut\n",
+    "        # Tasas por MINUTO (como ya lo tenías)\n",
     "        lam = df[col_asist].astype(float).to_numpy() / 60.0\n",
-    "        mu  = (df[col_cic].astype(float).to_numpy() * float(capacidad_por_ciclo)) / 60.0\n",
+    "        # capacidad efectiva = capacidad nominal * beta  (¡no uses int() para no truncar!)\n",
+    "        mu  = (df[col_cic].astype(float).to_numpy() * (float(capacidad_por_ciclo) * beta)) / 60.0\n",
     "\n",
-    "        # Initialize arrays for results per hour\n",
-    "        rho = np.full(len(df), np.nan)\n",
-    "        Wq  = np.full(len(df), np.nan)\n",
+    "        rho   = np.full(len(df), np.nan)\n",
+    "        Wq    = np.full(len(df), np.nan)\n",
     "        state = np.array([\"\"] * len(df), dtype=object)\n",
     "\n",
-    "        # Case conditions\n",
     "        closed       = (mu == 0) & (lam == 0)\n",
     "        off_service  = (mu == 0) & (lam > 0)\n",
     "        stable       = (mu > lam) & (mu > 0)\n",
     "        saturated    = (mu <= lam) & (mu > 0)\n",
     "\n",
-    "        # Closed → ρ = 0, Wq = 0\n",
     "        rho[closed] = 0\n",
     "        Wq[closed]  = 0\n",
     "        state[closed] = \"Closed\"\n",
     "\n",
-    "        # Off service → espera máxima\n",
     "        rho[off_service] = np.inf\n",
     "        Wq[off_service]  = max_espera_min\n",
     "        state[off_service] = \"Off service\"\n",
     "\n",
-    "        # stable →  M/M/1\n",
     "        rho[stable] = lam[stable] / mu[stable]\n",
+    "        # M/M/1 en MINUTOS porque lam y mu están en /min\n",
     "        Wq[stable]  = lam[stable] / (mu[stable] * (mu[stable] - lam[stable]))\n",
     "        state[stable] = \"stable\"\n",
     "\n",
-    "        # saturated → M/M/1\n",
     "        rho[saturated] = lam[saturated] / mu[saturated]\n",
     "        Wq[saturated]  = max_espera_min\n",
     "        state[saturated] = \"saturated\"\n",
     "\n",
     "        df[f\"lambda_{h}(/min)\"] = lam.round(4)\n",
     "        df[f\"mu_{h}(/min)\"]     = mu.round(4)\n",
-    "        df[f\"rho_{h}\"]          = np.clip(rho, None, 10)  # cap de rho\n",
-    "        df[f\"Wq_{h}(min)\"]      = Wq\n",
-    "        df[f\"state_{h}\"]       = state\n",
-    "\n",
-    "\n",
-    "       \n",
+    "        df[f\"rho_{h}\"]          = np.clip(rho, None, 10)\n",
+    "        df[f\"Wq_{h}(min)\"]      = np.minimum(Wq, max_espera_min)  # por si algún numérico se pasa\n",
+    "        df[f\"state_{h}\"]        = state\n",
     "    return df\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 224,
    "id": "3ea0245b",
    "metadata": {},
    "outputs": [],
    "source": [
-    "ballon_wheel_finaldf= mm1_perhour(df_balloon_wheel, capacidad_por_ciclo=CAPACIDADES_JUEGOS[\"Balloon Wheel\"], max_espera_min=MAX_TIME_JUEGOS[\"Balloon Wheel\"])\n",
-    "samba_ballon_finaldf = mm1_perhour(df_balloon_wheel, capacidad_por_ciclo=CAPACIDADES_JUEGOS[\"Samba Ballon\"], max_espera_min=MAX_TIME_JUEGOS[\"Samba Ballon\"])\n",
-    "loco_bus_finaldf = mm1_perhour(df_loco_bus, capacidad_por_ciclo=CAPACIDADES_JUEGOS[\"Loco Bus\"], max_espera_min=MAX_TIME_JUEGOS[\"Loco Bus\"])\n",
-    "dragon_finaldf = mm1_perhour(df_dragon, capacidad_por_ciclo=CAPACIDADES_JUEGOS[\"Dragón\"], max_espera_min=MAX_TIME_JUEGOS[\"Dragón\"])\n",
-    "comanche_finaldf = mm1_perhour(df_comanche, capacidad_por_ciclo=CAPACIDADES_JUEGOS[\"Comanche\"], max_espera_min=MAX_TIME_JUEGOS[\"Comanche\"])\n",
-    "raton_loroco_finaldf = mm1_perhour(df_raton_loroco, capacidad_por_ciclo=CAPACIDADES_JUEGOS[\"Ratón Loroco\"], max_espera_min=MAX_TIME_JUEGOS[\"Ratón Loroco\"])\n",
-    "remolino_finaldf = mm1_perhour(df_remolino, capacidad_por_ciclo=CAPACIDADES_JUEGOS[\"Remolino\"], max_espera_min=MAX_TIME_JUEGOS[\"Remolino\"])\n",
-    "rascacielos_finaldf = mm1_perhour(df_rascacielos, capacidad_por_ciclo=CAPACIDADES_JUEGOS[\"Rascacielos\"], max_espera_min=MAX_TIME_JUEGOS[\"Rascacielos\"])\n",
-    "tronco_splash_finaldf = mm1_perhour(df_tronco_splash, capacidad_por_ciclo=CAPACIDADES_JUEGOS[\"Tronco Splash\"], max_espera_min=MAX_TIME_JUEGOS[\"Tronco Splash\"])\n",
-    "bumperazo_finaldf = mm1_perhour(df_bumperazo, capacidad_por_ciclo=CAPACIDADES_JUEGOS[\"Bumperazo\"], max_espera_min=MAX_TIME_JUEGOS[\"Bumperazo\"])\n",
-    "brincanguro_finaldf = mm1_perhour(df_brincanguro, capacidad_por_ciclo=CAPACIDADES_JUEGOS[\"Brinkanguro\"], max_espera_min=MAX_TIME_JUEGOS[\"Brinkanguro\"])\n",
-    "moto_bala_finaldf = mm1_perhour(df_moto_bala, capacidad_por_ciclo=CAPACIDADES_JUEGOS[\"Moto Bala\"], max_espera_min=MAX_TIME_JUEGOS[\"Moto Bala\"])\n",
-    "convoy_finaldf = mm1_perhour(df_convoy, capacidad_por_ciclo=CAPACIDADES_JUEGOS[\"Convoy\"], max_espera_min=MAX_TIME_JUEGOS[\"Convoy\"])\n",
-    "bumpercitos_finaldf = mm1_perhour(df_bumpercitos, capacidad_por_ciclo=CAPACIDADES_JUEGOS[\"Bumpercitos\"], max_espera_min=MAX_TIME_JUEGOS[\"Bumpercitos\"])\n",
-    "bici_magica_finaldf = mm1_perhour(df_bici_magica, capacidad_por_ciclo=CAPACIDADES_JUEGOS[\"Bici Mágica\"], max_espera_min=MAX_TIME_JUEGOS[\"Bici Mágica\"])\n",
-    "polo_norte_finaldf = mm1_perhour(df_polo_norte, capacidad_por_ciclo=CAPACIDADES_JUEGOS[\"Polo Norte\"], max_espera_min=MAX_TIME_JUEGOS[\"Polo Norte\"])\n",
-    "sol_de_mi_barrio_finaldf = mm1_perhour(df_sol_de_mi_barrio, capacidad_por_ciclo=CAPACIDADES_JUEGOS[\"Sol de Mi Barrio\"], max_espera_min=MAX_TIME_JUEGOS[\"Sol de Mi Barrio\"])\n",
-    "tifon_finaldf = mm1_perhour(df_tifon, capacidad_por_ciclo=CAPACIDADES_JUEGOS[\"Tifón\"], max_espera_min=MAX_TIME_JUEGOS[\"Tifón\"])\n",
-    "carrusel_finaldf = mm1_perhour(df_carrusel, capacidad_por_ciclo=CAPACIDADES_JUEGOS[\"Carrusel\"], max_espera_min=MAX_TIME_JUEGOS[\"Carrusel\"])\n",
-    "trencito_finaldf = mm1_perhour(df_trencito, capacidad_por_ciclo=CAPACIDADES_JUEGOS[\"Trencito\"], max_espera_min=MAX_TIME_JUEGOS[\"Trencito\"])\n",
-    "el_revoloteo_finaldf = mm1_perhour(df_el_revoloteo, capacidad_por_ciclo=CAPACIDADES_JUEGOS[\"Revoloteo\"], max_espera_min=MAX_TIME_JUEGOS[\"Revoloteo\"])\n",
-    "guerra_pirata_finaldf = mm1_perhour(df_guerra_pirata, capacidad_por_ciclo=CAPACIDADES_JUEGOS[\"Guerra Pirata\"], max_espera_min=MAX_TIME_JUEGOS[\"Guerra Pirata\"])\n",
-    "faro_saltarin_finaldf = mm1_perhour(df_faro_saltarin, capacidad_por_ciclo=CAPACIDADES_JUEGOS[\"Faro Saltarín\"], max_espera_min=MAX_TIME_JUEGOS[\"Faro Saltarín\"])\n",
-    "el_relampago_finaldf = mm1_perhour(df_el_relampago, capacidad_por_ciclo=CAPACIDADES_JUEGOS[\"Relámpago\"], max_espera_min=MAX_TIME_JUEGOS[\"Relámpago\"])\n",
-    "casichoco_finaldf = mm1_perhour(df_casichoco, capacidad_por_ciclo=CAPACIDADES_JUEGOS[\"Casichoco\"], max_espera_min=MAX_TIME_JUEGOS[\"Casichoco\"])\n"
+    "ballon_wheel_finaldf = mm1_perhour(df_balloon_wheel, capacidad_por_ciclo=CAPACIDADES_JUEGOS[\"Balloon Wheel\"], max_espera_min=MAX_TIME_JUEGOS[\"Balloon Wheel\"], juego_name=\"Balloon Wheel\")\n",
+    "samba_ballon_finaldf = mm1_perhour(df_samba_ballon, capacidad_por_ciclo=CAPACIDADES_JUEGOS[\"Samba Ballon\"], max_espera_min=MAX_TIME_JUEGOS[\"Samba Ballon\"], juego_name=\"Samba Ballon\")\n",
+    "loco_bus_finaldf     = mm1_perhour(df_loco_bus,     capacidad_por_ciclo=CAPACIDADES_JUEGOS[\"Loco Bus\"],       max_espera_min=MAX_TIME_JUEGOS[\"Loco Bus\"],       juego_name=\"Loco Bus\")\n",
+    "dragon_finaldf       = mm1_perhour(df_dragon,       capacidad_por_ciclo=CAPACIDADES_JUEGOS[\"Dragón\"],         max_espera_min=MAX_TIME_JUEGOS[\"Dragón\"],         juego_name=\"Dragón\")\n",
+    "comanche_finaldf     = mm1_perhour(df_comanche,     capacidad_por_ciclo=CAPACIDADES_JUEGOS[\"Comanche\"],       max_espera_min=MAX_TIME_JUEGOS[\"Comanche\"],       juego_name=\"Comanche\")\n",
+    "raton_loroco_finaldf = mm1_perhour(df_raton_loroco, capacidad_por_ciclo=CAPACIDADES_JUEGOS[\"Ratón Loroco\"],   max_espera_min=MAX_TIME_JUEGOS[\"Ratón Loroco\"],   juego_name=\"Ratón Loroco\")\n",
+    "remolino_finaldf     = mm1_perhour(df_remolino,     capacidad_por_ciclo=CAPACIDADES_JUEGOS[\"Remolino\"],       max_espera_min=MAX_TIME_JUEGOS[\"Remolino\"],       juego_name=\"Remolino\")\n",
+    "rascacielos_finaldf  = mm1_perhour(df_rascacielos,  capacidad_por_ciclo=CAPACIDADES_JUEGOS[\"Rascacielos\"],    max_espera_min=MAX_TIME_JUEGOS[\"Rascacielos\"],    juego_name=\"Rascacielos\")\n",
+    "tronco_splash_finaldf= mm1_perhour(df_tronco_splash,capacidad_por_ciclo=CAPACIDADES_JUEGOS[\"Tronco Splash\"],  max_espera_min=MAX_TIME_JUEGOS[\"Tronco Splash\"],  juego_name=\"Tronco Splash\")\n",
+    "bumperazo_finaldf    = mm1_perhour(df_bumperazo,    capacidad_por_ciclo=CAPACIDADES_JUEGOS[\"Bumperazo\"],      max_espera_min=MAX_TIME_JUEGOS[\"Bumperazo\"],      juego_name=\"Bumperazo\")\n",
+    "brincanguro_finaldf  = mm1_perhour(df_brincanguro,  capacidad_por_ciclo=CAPACIDADES_JUEGOS[\"Brinkanguro\"],    max_espera_min=MAX_TIME_JUEGOS[\"Brinkanguro\"],    juego_name=\"Brinkanguro\")\n",
+    "moto_bala_finaldf    = mm1_perhour(df_moto_bala,    capacidad_por_ciclo=CAPACIDADES_JUEGOS[\"Moto Bala\"],      max_espera_min=MAX_TIME_JUEGOS[\"Moto Bala\"],      juego_name=\"Moto Bala\")\n",
+    "convoy_finaldf       = mm1_perhour(df_convoy,       capacidad_por_ciclo=CAPACIDADES_JUEGOS[\"Convoy\"],         max_espera_min=MAX_TIME_JUEGOS[\"Convoy\"],         juego_name=\"Convoy\")\n",
+    "bumpercitos_finaldf  = mm1_perhour(df_bumpercitos,  capacidad_por_ciclo=CAPACIDADES_JUEGOS[\"Bumpercitos\"],    max_espera_min=MAX_TIME_JUEGOS[\"Bumpercitos\"],    juego_name=\"Bumpercitos\")\n",
+    "bici_magica_finaldf  = mm1_perhour(df_bici_magica,  capacidad_por_ciclo=CAPACIDADES_JUEGOS[\"Bici Mágica\"],    max_espera_min=MAX_TIME_JUEGOS[\"Bici Mágica\"],    juego_name=\"Bici Mágica\")\n",
+    "polo_norte_finaldf   = mm1_perhour(df_polo_norte,   capacidad_por_ciclo=CAPACIDADES_JUEGOS[\"Polo Norte\"],     max_espera_min=MAX_TIME_JUEGOS[\"Polo Norte\"],     juego_name=\"Polo Norte\")\n",
+    "sol_de_mi_barrio_finaldf = mm1_perhour(df_sol_de_mi_barrio, capacidad_por_ciclo=CAPACIDADES_JUEGOS[\"Sol de Mi Barrio\"], max_espera_min=MAX_TIME_JUEGOS[\"Sol de Mi Barrio\"], juego_name=\"Sol de Mi Barrio\")\n",
+    "tifon_finaldf        = mm1_perhour(df_tifon,        capacidad_por_ciclo=CAPACIDADES_JUEGOS[\"Tifón\"],          max_espera_min=MAX_TIME_JUEGOS[\"Tifón\"],          juego_name=\"Tifón\")\n",
+    "carrusel_finaldf     = mm1_perhour(df_carrusel,     capacidad_por_ciclo=CAPACIDADES_JUEGOS[\"Carrusel\"],       max_espera_min=MAX_TIME_JUEGOS[\"Carrusel\"],       juego_name=\"Carrusel\")\n",
+    "trencito_finaldf     = mm1_perhour(df_trencito,     capacidad_por_ciclo=CAPACIDADES_JUEGOS[\"Trencito\"],       max_espera_min=MAX_TIME_JUEGOS[\"Trencito\"],       juego_name=\"Trencito\")\n",
+    "el_revoloteo_finaldf = mm1_perhour(df_el_revoloteo, capacidad_por_ciclo=CAPACIDADES_JUEGOS[\"Revoloteo\"],      max_espera_min=MAX_TIME_JUEGOS[\"Revoloteo\"],      juego_name=\"Revoloteo\")\n",
+    "guerra_pirata_finaldf= mm1_perhour(df_guerra_pirata,capacidad_por_ciclo=CAPACIDADES_JUEGOS[\"Guerra Pirata\"],  max_espera_min=MAX_TIME_JUEGOS[\"Guerra Pirata\"],  juego_name=\"Guerra Pirata\")\n",
+    "faro_saltarin_finaldf= mm1_perhour(df_faro_saltarin,capacidad_por_ciclo=CAPACIDADES_JUEGOS[\"Faro Saltarín\"],  max_espera_min=MAX_TIME_JUEGOS[\"Faro Saltarín\"],  juego_name=\"Faro Saltarín\")\n",
+    "el_relampago_finaldf = mm1_perhour(df_el_relampago, capacidad_por_ciclo=CAPACIDADES_JUEGOS[\"Relámpago\"],      max_espera_min=MAX_TIME_JUEGOS[\"Relámpago\"],      juego_name=\"Relámpago\")\n",
+    "casichoco_finaldf    = mm1_perhour(df_casichoco,    capacidad_por_ciclo=CAPACIDADES_JUEGOS[\"Casichoco\"],      max_espera_min=MAX_TIME_JUEGOS[\"Casichoco\"],      juego_name=\"Casichoco\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 225,
    "id": "ffdf3141",
    "metadata": {},
    "outputs": [],
