--- a/data.ipynb
+++ b/data.ipynb
@@ -1646,7 +1646,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 223,
+   "execution_count": null,
    "id": "33756cee",
    "metadata": {},
    "outputs": [],
@@ -1657,14 +1657,6 @@
     "HORAS = [f\"{h}:00\" for h in range(9, 19)]  # 9..18\n",
     "\n",
     "def mm1_perhour(df, capacidad_por_ciclo, max_espera_min=60, juego_name=None):\n",
-    "    \"\"\"\n",
-    "    Calcula λ, μ, ρ y Wq por hora con M/M/1 usando capacidad efectiva:\n",
-    "        mu = (ciclos * capacidad_por_ciclo * beta) / 60\n",
-    "    Donde beta se toma de BETA_JUEGO por nombre de juego; si no existe, usa DEFAULT_BETA.\n",
-    "    Mantiene tu clipping:\n",
-    "        - Off service o saturado  -> Wq = max_espera_min\n",
-    "        - Estable -> fórmula M/M/1 (por minuto)\n",
-    "    \"\"\"\n",
     "    df = df.copy()\n",
     "    beta = get_beta(juego_name) if juego_name is not None else 0.80\n",
     "\n",
@@ -1674,9 +1666,7 @@
     "        if col_cic not in df.columns or col_asist not in df.columns:\n",
     "            continue\n",
     "\n",
-    "        # Tasas por MINUTO (como ya lo tenías)\n",
     "        lam = df[col_asist].astype(float).to_numpy() / 60.0\n",
-    "        # capacidad efectiva = capacidad nominal * beta  (¡no uses int() para no truncar!)\n",
     "        mu  = (df[col_cic].astype(float).to_numpy() * (float(capacidad_por_ciclo) * beta)) / 60.0\n",
     "\n",
     "        rho   = np.full(len(df), np.nan)\n",
@@ -1697,7 +1687,6 @@
     "        state[off_service] = \"Off service\"\n",
     "\n",
     "        rho[stable] = lam[stable] / mu[stable]\n",
-    "        # M/M/1 en MINUTOS porque lam y mu están en /min\n",
     "        Wq[stable]  = lam[stable] / (mu[stable] * (mu[stable] - lam[stable]))\n",
     "        state[stable] = \"stable\"\n",
     "\n",
@@ -1708,7 +1697,7 @@
     "        df[f\"lambda_{h}(/min)\"] = lam.round(4)\n",
     "        df[f\"mu_{h}(/min)\"]     = mu.round(4)\n",
     "        df[f\"rho_{h}\"]          = np.clip(rho, None, 10)\n",
-    "        df[f\"Wq_{h}(min)\"]      = np.minimum(Wq, max_espera_min)  # por si algún numérico se pasa\n",
+    "        df[f\"Wq_{h}(min)\"]      = np.minimum(Wq, max_espera_min)\n",
     "        df[f\"state_{h}\"]        = state\n",
     "    return df\n"
    ]
