--- a/data.ipynb
+++ b/data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 208,
+   "execution_count": 1,
    "id": "fc5b5ea6",
    "metadata": {},
    "outputs": [],
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 209,
+   "execution_count": 2,
    "id": "4a2ec613",
    "metadata": {},
    "outputs": [
@@ -426,7 +426,7 @@
        "[15300 rows x 33 columns]"
       ]
      },
-     "execution_count": 209,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -437,7 +437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 210,
+   "execution_count": 3,
    "id": "88d644f7",
    "metadata": {},
    "outputs": [],
@@ -451,7 +451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 211,
+   "execution_count": 4,
    "id": "449f2810",
    "metadata": {},
    "outputs": [],
@@ -467,7 +467,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 212,
+   "execution_count": 5,
    "id": "01f4ffeb",
    "metadata": {},
    "outputs": [
@@ -519,7 +519,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 213,
+   "execution_count": 6,
    "id": "06b6f5d5",
    "metadata": {},
    "outputs": [
@@ -906,7 +906,7 @@
        "[15300 rows x 38 columns]"
       ]
      },
-     "execution_count": 213,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -917,7 +917,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 214,
+   "execution_count": 7,
    "id": "bf81c1d2",
    "metadata": {},
    "outputs": [],
@@ -928,7 +928,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 215,
+   "execution_count": 8,
    "id": "a3242df2",
    "metadata": {},
    "outputs": [
@@ -976,7 +976,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 215,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -988,7 +988,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 216,
+   "execution_count": 9,
    "id": "99e0dc14",
    "metadata": {},
    "outputs": [
@@ -1010,7 +1010,74 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 217,
+   "execution_count": null,
+   "id": "8c51bf20",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "year\n",
+      "2022    3265587.0\n",
+      "2023    7536314.0\n",
+      "2024    7356626.0\n",
+      "Name: asistencia total, dtype: float64\n"
+     ]
+    }
+   ],
+   "source": [
+    "yearly_attendance = all_data.groupby(\"year\")[\"asistencia total\"].sum()\n",
+    "print(yearly_attendance)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "017769a0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "          date day_of_week  asistencia total\n",
+      "0   2022-01-01    Saturday           31071.0\n",
+      "1   2022-01-02      Sunday           34378.0\n",
+      "2   2022-01-06    Thursday           20391.0\n",
+      "3   2022-01-07      Friday           17696.0\n",
+      "4   2022-01-08    Saturday           24610.0\n",
+      "..         ...         ...               ...\n",
+      "605 2024-12-26    Thursday           33029.0\n",
+      "606 2024-12-27      Friday           36031.0\n",
+      "607 2024-12-28    Saturday           34942.0\n",
+      "608 2024-12-29      Sunday           41729.0\n",
+      "609 2024-12-30      Monday           28027.0\n",
+      "\n",
+      "[610 rows x 3 columns]\n",
+      "day_of_week\n",
+      "Sunday       37335.708955\n",
+      "Saturday     33705.492537\n",
+      "Friday       27377.296296\n",
+      "Thursday     26787.323529\n",
+      "Monday       20206.166667\n",
+      "Tuesday      19704.777778\n",
+      "Wednesday    15874.517241\n",
+      "Name: asistencia total, dtype: float64\n"
+     ]
+    }
+   ],
+   "source": [
+    "df_dia = all_data.groupby([\"date\", \"day_of_week\"])[\"asistencia total\"].sum().reset_index()\n",
+    "print(df_dia)\n",
+    "\n",
+    "average_by_day = df_dia.groupby(\"day_of_week\")[\"asistencia total\"].mean().sort_values(ascending=False)\n",
+    "print(average_by_day)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "id": "539555ab",
    "metadata": {},
    "outputs": [],
@@ -1046,7 +1113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 218,
+   "execution_count": 12,
    "id": "425e65c5",
    "metadata": {},
    "outputs": [],
@@ -1083,7 +1150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 219,
+   "execution_count": 13,
    "id": "732b27c5",
    "metadata": {},
    "outputs": [],
@@ -1117,7 +1184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 220,
+   "execution_count": 14,
    "id": "9bda3725",
    "metadata": {},
    "outputs": [],
@@ -1136,7 +1203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 221,
+   "execution_count": 15,
    "id": "cb121203",
    "metadata": {},
    "outputs": [],
@@ -1227,7 +1294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 222,
+   "execution_count": 16,
    "id": "823ee958",
    "metadata": {},
    "outputs": [
@@ -1627,7 +1694,7 @@
        "[612 rows x 37 columns]"
       ]
      },
-     "execution_count": 222,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1646,7 +1713,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "33756cee",
    "metadata": {},
    "outputs": [],
@@ -1704,7 +1771,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 224,
+   "execution_count": 18,
    "id": "3ea0245b",
    "metadata": {},
    "outputs": [],
@@ -1738,7 +1805,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 225,
+   "execution_count": 19,
    "id": "ffdf3141",
    "metadata": {},
    "outputs": [],
